[project]
name = "fast-api-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.139.2",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "imagekitio<5",
    "pip-system-certs>=5.3",
    "python-dotenv>=1.2.2",
    "streamlit>=1.59.2",
    "uvicorn[standard]>=0.51.0",
]
